[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://remaining_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://target_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://TargetPanel.gd" type="Script" id=4]
[ext_resource path="res://ConquerPanel.gd" type="Script" id=5]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 533.0

[node name="AppNameHeader" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 14.0
text = "Loop-in-out"
align = 1

[node name="PlayersHeader" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 256.0
margin_bottom = 46.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PlayersHeader"]
margin_left = 7.0
margin_top = 7.0
margin_right = 249.0
margin_bottom = 21.0

[node name="Player1Label" type="Label" parent="PanelContainer/VBoxContainer/PlayersHeader/HBoxContainer"]
margin_right = 52.0
margin_bottom = 14.0
text = "111 (25)"

[node name="Player1Turn" type="ColorRect" parent="PanelContainer/VBoxContainer/PlayersHeader/HBoxContainer"]
margin_left = 56.0
margin_right = 70.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
color = Color( 1, 0, 0, 1 )

[node name="Space" type="Control" parent="PanelContainer/VBoxContainer/PlayersHeader/HBoxContainer"]
margin_left = 74.0
margin_right = 168.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Player2Turn" type="ColorRect" parent="PanelContainer/VBoxContainer/PlayersHeader/HBoxContainer"]
margin_left = 172.0
margin_right = 186.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
color = Color( 1, 0, 0, 1 )

[node name="Player2Label" type="Label" parent="PanelContainer/VBoxContainer/PlayersHeader/HBoxContainer"]
margin_left = 190.0
margin_right = 242.0
margin_bottom = 14.0
text = "222 (22)"

[node name="ScoreBoards" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 256.0
margin_bottom = 322.0
size_flags_vertical = 3

[node name="Player1Score" type="PanelContainer" parent="PanelContainer/VBoxContainer/ScoreBoards"]
margin_right = 126.0
margin_bottom = 272.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScoreBoards/Player1Score"]
margin_left = 7.0
margin_top = 73.0
margin_right = 119.0
margin_bottom = 199.0
size_flags_vertical = 4

[node name="Player1RemainingLabel" type="Label" parent="PanelContainer/VBoxContainer/ScoreBoards/Player1Score/VBoxContainer"]
margin_right = 112.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "501"
align = 1
valign = 1

[node name="Player1Target" type="Label" parent="PanelContainer/VBoxContainer/ScoreBoards/Player1Score/VBoxContainer"]
margin_top = 71.0
margin_right = 112.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.533333, 0.533333, 0.533333, 1 )
text = "0"
align = 1
valign = 1

[node name="Player2Score" type="PanelContainer" parent="PanelContainer/VBoxContainer/ScoreBoards"]
margin_left = 130.0
margin_right = 256.0
margin_bottom = 272.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScoreBoards/Player2Score"]
margin_left = 7.0
margin_top = 73.0
margin_right = 119.0
margin_bottom = 199.0
size_flags_vertical = 4

[node name="Player2RemainingLabel" type="Label" parent="PanelContainer/VBoxContainer/ScoreBoards/Player2Score/VBoxContainer"]
margin_right = 112.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "501"
align = 1
valign = 1

[node name="Player2Target" type="Label" parent="PanelContainer/VBoxContainer/ScoreBoards/Player2Score/VBoxContainer"]
margin_top = 71.0
margin_right = 112.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.533333, 0.533333, 0.533333, 1 )
text = "0"
align = 1
valign = 1

[node name="TargetPanel" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 326.0
margin_right = 256.0
margin_bottom = 526.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TargetPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 249.0
margin_bottom = 193.0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer"]
editor/display_folded = true
margin_right = 242.0
margin_bottom = 28.0

[node name="InsertedValueLabel" type="Label" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 235.0
margin_bottom = 21.0
align = 1

[node name="Keypad" type="PanelContainer" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer"]
margin_left = 22.0
margin_top = 32.0
margin_right = 219.0
margin_bottom = 186.0
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad"]
margin_left = 7.0
margin_top = 7.0
margin_right = 190.0
margin_bottom = 147.0
custom_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer"]
editor/display_folded = true
margin_right = 104.0
margin_bottom = 140.0
size_flags_horizontal = 4
columns = 3

[node name="SevenButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
text = "7"

[node name="EightButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
text = "8"

[node name="NineButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
text = "9"

[node name="FourButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
text = "4"

[node name="FiveButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer"]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
text = "5"

[node name="SixButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer"]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
text = "6"

[node name="OneButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
text = "1"

[node name="TwoButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer"]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
text = "2"

[node name="ThreeButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer"]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
text = "3"

[node name="ZeroButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer"]
margin_left = 114.0
margin_right = 183.0
margin_bottom = 140.0

[node name="BackspaceButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/VBoxContainer"]
margin_right = 69.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
text = "Back"

[node name="UndoButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 69.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
text = "Undo"

[node name="NoScoreButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 69.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
text = "No score"

[node name="OKButton" type="Button" parent="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 69.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
text = "OK"

[node name="ConquerPanel" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
visible = false
margin_top = 360.0
margin_right = 256.0
margin_bottom = 526.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ConquerPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 249.0
margin_bottom = 159.0

[node name="Keypad" type="PanelContainer" parent="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer"]
margin_left = 14.0
margin_right = 228.0
margin_bottom = 152.0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad"]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 145.0
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer"]
margin_right = 200.0
margin_bottom = 64.0

[node name="OneDartButton" type="Button" parent="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer/HBoxContainer2"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
text = "1"

[node name="TwoDartsButton" type="Button" parent="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer/HBoxContainer2"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
text = "2"

[node name="ThreeDartsButton" type="Button" parent="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer/HBoxContainer2"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
text = "3"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer"]
margin_left = 21.0
margin_top = 74.0
margin_right = 179.0
margin_bottom = 138.0
size_flags_horizontal = 4
custom_constants/separation = 30

[node name="NoScoreButton" type="Button" parent="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
text = "X"

[node name="UndoButton" type="Button" parent="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer/HBoxContainer"]
margin_left = 94.0
margin_right = 158.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
text = "Undo"
[connection signal="entered_value" from="PanelContainer/VBoxContainer/TargetPanel" to="." method="_on_TargetPanel_entered_value"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer/SevenButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_SevenButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer/EightButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_EightButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer/NineButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_NineButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer/FourButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_FourButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer/FiveButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_FiveButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer/SixButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_SixButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer/OneButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_OneButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer/TwoButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_TwoButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer/ThreeButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_ThreeButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/GridContainer/ZeroButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_ZeroButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/VBoxContainer/BackspaceButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_BackspaceButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/VBoxContainer/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/VBoxContainer/NoScoreButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_NoScoreButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TargetPanel/VBoxContainer/Keypad/HBoxContainer/VBoxContainer/OKButton" to="PanelContainer/VBoxContainer/TargetPanel" method="_on_OKButton_pressed"]
[connection signal="darts_to_checkout" from="PanelContainer/VBoxContainer/ConquerPanel" to="." method="_on_ConquerPanel_darts_to_checkout"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer/HBoxContainer2/OneDartButton" to="PanelContainer/VBoxContainer/ConquerPanel" method="_on_OneDartButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer/HBoxContainer2/TwoDartsButton" to="PanelContainer/VBoxContainer/ConquerPanel" method="_on_TwoDartsButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer/HBoxContainer2/ThreeDartsButton" to="PanelContainer/VBoxContainer/ConquerPanel" method="_on_ThreeDartsButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer/HBoxContainer/NoScoreButton" to="PanelContainer/VBoxContainer/ConquerPanel" method="_on_NoScoreButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ConquerPanel/VBoxContainer/Keypad/VBoxContainer/HBoxContainer/UndoButton" to="." method="_on_UndoButton_pressed"]
